src/test/resources/Parser/SyntaxErrors/DynamicCallWithKeywordArgs.front
class A:
    static f(int32 i) {}

    static test() {
        fun := f*;
        fun(i=2);
    }